--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<p> Did on my own </p>
-	<p> This line is also was made by me </p>
+	<p> Let's try another one </p>
+	<p> Indeed, we need a lot of practice </p>
 
 </body>
 </html>
