--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<title>Document</title>
 	<link rel='stylesheet' href='style.css'/>
 </head>
+<h1>
+	Hi there! Let's smoke up today!
+</h1>
 <body>
 	<p> Let's try another one </p>
 	<p> Indeed, we need a lot of practice </p>
